--- a/package.json
+++ b/package.json
@@ -1,93 +1,95 @@
 {
-  "name": "agriculture-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "@craco/craco": "^5.6.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.10.2",
-    "axios": "^0.19.2",
-    "babel-plugin-import": "^1.13.0",
-    "bootstrap": "^4.5.2",
-    "chart.js": "^2.9.3",
-    "craco-less": "^1.17.0",
-    "customize-cra": "^1.0.0",
-    "email-validator": "^2.0.4",
-    "formik": "^2.1.5",
-    "jquery": "^3.6.0",
-    "less": "^3.12.2",
-    "less-loader": "^6.2.0",
-    "moment": "^2.29.1",
-    "popper.js": "^1.16.1",
-    "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
-    "react-bootstrap": "^1.3.0",
-    "react-chartjs-2": "^2.10.0",
-    "react-charts": "^2.0.0-beta.7",
-    "react-dom": "^16.13.1",
-    "react-google-maps": "^9.4.5",
-    "react-hook-form": "^6.4.1",
-    "react-infinite-scroll-component": "^5.1.0",
-    "react-loader-spinner": "^3.1.14",
-    "react-promise-tracker": "^2.1.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1",
-    "recompose": "^0.30.0",
-    "unicode": "^13.0.0",
-    "yup": "^0.29.3"
-  },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "./src/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write",
-      "eslint src/*.js --fix-dry-run"
-    ]
-  },
-  "devDependencies": {
-    "@umijs/preset-react": "^1.5.19",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.20.5",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.1.1"
-  },
-  "main": "index.js",
-  "repository": "https://github.com/sanchi-chugh/agriculture-frontend.git",
-  "author": "sanchi-chugh <sanchichugh2001@gmail.com>",
-  "license": "MIT"
+    "name": "agriculture-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^4.2.2",
+        "@craco/craco": "^5.6.4",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "antd": "^4.10.2",
+        "axios": "^0.19.2",
+        "babel-plugin-import": "^1.13.0",
+        "bootstrap": "^4.5.2",
+        "chart.js": "^2.9.3",
+        "craco-less": "^1.17.0",
+        "customize-cra": "^1.0.0",
+        "email-validator": "^2.0.4",
+        "formik": "^2.1.5",
+        "jquery": "^3.6.0",
+        "less": "^3.12.2",
+        "less-loader": "^6.2.0",
+        "mapbox-gl": "^2.2.0",
+        "moment": "^2.29.1",
+        "popper.js": "^1.16.1",
+        "react": "^16.13.1",
+        "react-app-rewired": "^2.1.6",
+        "react-bootstrap": "^1.3.0",
+        "react-chartjs-2": "^2.10.0",
+        "react-charts": "^2.0.0-beta.7",
+        "react-dom": "^16.13.1",
+        "react-google-maps": "^9.4.5",
+        "react-hook-form": "^6.4.1",
+        "react-infinite-scroll-component": "^5.1.0",
+        "react-loader-spinner": "^3.1.14",
+        "react-promise-tracker": "^2.1.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "3.4.1",
+        "reactstrap": "^8.5.1",
+        "readdirp": "^3.5.0",
+        "recompose": "^0.30.0",
+        "unicode": "^13.0.0",
+        "yup": "^0.29.3"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "./src/*.{js,jsx,ts,tsx}": [
+            "npx prettier --write",
+            "eslint src/*.js --fix-dry-run"
+        ]
+    },
+    "devDependencies": {
+        "@umijs/preset-react": "^1.5.19",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.2.2",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-react": "^7.20.5",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.3.0",
+        "prettier": "^2.1.1"
+    },
+    "main": "index.js",
+    "repository": "https://github.com/sanchi-chugh/agriculture-frontend.git",
+    "author": "sanchi-chugh <sanchichugh2001@gmail.com>",
+    "license": "MIT"
 }
